--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rehttp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "very small overlay on top of node http",
   "main": "rehttp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel lib/rehttp.js >> rehttp.js"
+    "compile": "babel lib/rehttpBrowser.js -o rehttpBrowser.js"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,12 @@
     "url": "https://github.com/dehau/rehttp/issues"
   },
   "homepage": "https://github.com/dehau/rehttp#readme",
-  "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-runtime": "^5.8.25"
+  "devDependencies": {},
+  "dependencies": {
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.0",
+    "babel-plugin-object-assign": "^1.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.4.3"
   }
 }
