--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "rehttp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel lib/rehttpBrowser.js -o rehttpBrowser.js"
+    "compile": "babel lib/browser/rehttp.js -o rehttpBrowser.js"
   },
   "repository": {
     "type": "git",
