--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rehttp",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "very small overlay on top of node http",
   "main": "rehttp.js",
   "scripts": {
@@ -24,12 +24,12 @@
     "url": "https://github.com/dehau/rehttp/issues"
   },
   "homepage": "https://github.com/dehau/rehttp#readme",
-  "devDependencies": {},
-  "dependencies": {
-    "babel": "^6.3.26",
+  "devDependencies": {
+    "babel-plugin-transform-object-assign": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
     "babel-cli": "^6.4.0",
-    "babel-core": "^6.4.0",
     "babel-plugin-object-assign": "^1.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.4.3"
-  }
+  },
+  "dependencies": {}
 }
